--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Yeni Ürün Ekle</h2>
 
-<form asp-action="Create" method="post">
+<form asp-controller="Products" asp-action="Create" method="post" enctype="multipart/form-data">
 
     <div class="form-group">
         <label asp-for="Title"></label>
@@ -22,6 +22,11 @@
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
 
+    <div class="form-group">
+        <label>Resim</label>
+        <input type="file" class="form-control" name="imageFile" accept="image/*" />
+    </div>
+
     <div class="form-check mt-3">
         <input class="form-check-input" asp-for="IsSold" />
         <label class="form-check-label" asp-for="IsSold"></label>
@@ -29,6 +34,7 @@
 
     <button class="btn btn-primary mt-3">Kaydet</button>
     <a class="btn btn-secondary mt-3 ms-2" href="/Products">Geri</a>
+
 </form>
 
 @section Scripts {
